# django-system-monitor

./: LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
system_monitor/: __init__.py  admin.py  apps.py  models.py  tests.py  utils.py
system_monitor/migrations/: 0001_initial.py
system_monitor/static/system_monitor/js/: index.js
system_monitor/templates/admin/: overview_change_list.html
