[metadata]
name = system-monitor
version = 0.3
description = System Status in Django Admin
url = https://github.com/Samarthegde/django-system-monitor
author = Dann Luciano
author_email = samarthkombemane@gmail.com
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: System :: Monitoring
keywords = django, system, monitor, admin, status
project_urls =
    Bug Tracker = https://github.com/Samarthegde/django-system-monitor/issues
    Source Code = https://github.com/Samarthegde/django-system-monitor
long_description = file: README.md
long_description_content_type = text/markdown
[options]
packages = find:
include_package_data = true
python_requires = >=3
setup_requires =
    setuptools >= 52.0.0
install_requires =
    Django>=3
    psutil>=5.8
